@@ -167,7 +167,7 @@ REPLACE INTO `mob_db` VALUES (1094,'AMBERNITE','Ambernite','Ambernite',13,495,0,
 REPLACE INTO `mob_db` VALUES (1095,'ANDRE','Andre','Andre',17,688,0,109,71,1,60,71,10,0,1,17,24,20,26,20,10,12,0,4,22,0x118B,300,1288,288,384,0,0,0,0,0,0,0,0,955,9000,910,1000,938,500,993,50,1001,4,1002,350,757,28,0,0,0,0,4043,1);
 REPLACE INTO `mob_db` VALUES (1096,'ANGELING','Angeling','Angeling',20,55000,0,163,144,1,120,195,0,70,1,50,20,75,68,200,10,12,1,8,86,0x37B5,200,1072,672,672,0,0,0,0,0,0,0,0,2254,100,2324,60,610,500,2282,1,509,2000,512,28,714,40,0,0,0,0,4054,1);
 REPLACE INTO `mob_db` VALUES (1097,'ANT_EGG','Ant Egg','Ant Egg',4,420,0,5,4,0,1,2,20,20,1,1,1,0,1,20,10,12,0,0,60,0x0,1000,1001,1,1,0,0,0,0,0,0,0,0,1010,320,935,2000,909,2000,938,650,713,2000,1002,200,0,0,0,0,0,0,4013,1);
-REPLACE INTO `mob_db` VALUES (1098,'ANUBIS','Anubis','Anubis',75,38000,0,16800,13200,1,812,1500,31,31,1,69,10,87,95,95,10,12,2,7,49,0x3695,200,1000,500,250,0,0,0,0,0,0,0,0,930,3000,1045,4365,7054,500,985,20,724,50,1625,3,0,0,0,0,0,0,4138,1);
+REPLACE INTO `mob_db` VALUES (1098,'ANUBIS','Anubis','Anubis',75,38000,0,16800,13200,1,530,1167,35,31,5,65,10,82,77,33,10,12,2,7,49,0x3695,200,1000,500,250,0,0,0,0,0,0,0,0,930,3000,1045,4365,7054,500,985,20,724,50,1625,3,0,0,0,0,0,0,4138,1);
 REPLACE INTO `mob_db` VALUES (1099,'ARGIOPE','Argiope','Argiope',41,4382,0,1797,849,1,395,480,30,0,1,41,31,10,56,30,10,12,2,4,25,0x3795,300,1792,792,336,0,0,0,0,0,0,0,0,1042,5335,912,1200,757,175,2406,5,511,1500,719,10,0,0,0,0,0,0,4114,1);
 REPLACE INTO `mob_db` VALUES (1100,'ARGOS','Argos','Argos',25,1117,0,388,188,1,158,191,15,0,1,25,25,5,32,15,10,12,2,4,25,0x3195,300,1468,468,768,0,0,0,0,0,0,0,0,1025,9000,911,1200,1042,500,757,61,511,670,508,250,10017,15,0,0,0,0,4075,1);
 REPLACE INTO `mob_db` VALUES (1101,'BAPHOMET_','Baphomet Jr.','Baphomet Jr.',50,8578,0,2706,1480,1,487,590,15,25,1,75,55,1,93,45,10,12,0,6,27,0x3795,100,868,480,120,0,0,0,0,0,0,0,0,923,500,984,63,1464,2,607,50,610,100,508,1300,2405,50,0,0,0,0,4129,1);
@@ -902,15 +902,35 @@ REPLACE INTO `mob_db` VALUES (1814,'EVENT_MOON','Moonlight Flower','Moonlight Fl
 REPLACE INTO `mob_db` VALUES (1815,'EVENT_RICECAKE','Rice Cake','Rice Cake',12,20,0,0,0,1,1,2,100,99,1,1,1,1,1,1,0,0,1,0,20,0x40,2000,1320,0,300,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1816,'EVENT_GOURD','Gourd','Gourd',12,1000,0,0,0,1,1,2,100,99,1,1,1,1,1,1,0,0,1,0,20,0x40,2000,96,96,96,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 # //Guessed mobs start here
-REPLACE INTO `mob_db` VALUES (1829,'G_KNIGHT_GUARDIAN','Sword Guardian','Sword Master',86,152533,0,155013,122604,2,7590,9140,60,60,110,90,60,3,125,86,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1370,15,1163,20,1168,10,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1830,'G_SOLDIER_GUARDIAN','Bow Guardian','Bow Master',80,80404,0,50149,2306,12,1840,2520,40,60,85,126,40,44,163,80,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1723,10,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1831,'SALAMANDER','Salamander','Salamander',91,97934,0,72000,55000,2,7590,10680,60,80,71,91,65,18,102,91,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,7097,3000,994,100,716,500,2621,1,1370,5,2680,1,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1832,'IFRIT','Ifrit','Ifrit',99,7700000,0,3154321,3114520,3,13530,17000,40,80,100,108,25,190,147,99,10,12,2,0,83,0x37B5,120,76,200,288,1577160,10000,603,5500,617,5000,994,5000,994,3000,2345,80,1133,80,1473,80,1471,80,2678,60,2677,60,2679,60,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1833,'KASA','Kasa','Kasa',85,80375,0,49000,38000,2,2000,6000,40,80,51,105,31,250,90,85,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,2344,3,2680,1,2622,1,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1834,'G_SALAMANDER','Salamander','Salamander',91,97934,0,0,0,2,7590,10680,60,80,71,91,65,18,102,91,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1835,'G_KASA','Kasa','Kasa',85,80375,0,0,0,2,2000,6000,40,80,51,105,31,250,90,85,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1836,'MAGMARING','Magmaring','Magmaring',40,5300,0,2110,1910,1,550,700,40,60,30,55,25,12,80,40,10,12,0,0,43,0x83,300,384,672,432,0,0,0,0,0,0,0,0,7097,1000,7096,1000,12018,100,757,100,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1837,'FIRE_IMP','Fire Imp','Fire Imp',76,46430,0,25200,11077,1,1059,1509,40,80,30,96,30,180,96,76,10,12,0,6,83,0x3395,120,76,384,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,13303,5,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1838,'KNOCKER','Knocker','Knocker',50,7755,0,2202,4023,1,889,990,40,80,25,58,28,36,64,105,10,12,0,6,22,0x191,200,576,384,288,0,0,0,0,0,0,0,0,997,30,1003,150,1040,5500,2286,1,2209,10,1001,100,5009,1,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1839,'BYORGUE','Byorgue','Byorgue',86,38133,0,0,0,3,700,1500,40,60,36,126,12,30,146,86,10,12,1,7,20,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1829,'G_KNIGHT_GUARDIAN','Sword Guardian','Sword Master',86,152533,0,155013,122604,2,7590,9140,60,33,1,40,54,65,125,65,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1370,15,1163,20,1168,10,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1830,'G_SOLDIER_GUARDIAN','Bow Guardian','Bow Master',80,80404,0,50149,23006,12,1840,2520,40,62,1,80,33,90,165,55,10,12,2,7,80,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,7069,3000,1723,10,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1831,'SALAMANDER','Salamander','Salamander',91,97934,0,72000,55000,2,7590,10860,65,50,1,55,44,45,180,25,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,7097,3000,994,100,716,500,1370,5,2621,1,2680,1,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1832,'IFRIT','Ifrit','Ifrit',99,7700000,0,3154321,3114520,3,13530,17000,40,50,1,180,25,190,199,50,10,12,2,0,83,0x37B5,120,76,200,288,1577160,10000,603,5500,617,5000,994,5000,994,3000,2345,80,1133,80,1473,80,1471,80,2678,60,2677,60,2679,60,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1833,'KASA','Kasa','Kasa',85,80375,0,49000,38000,2,3030,3500,23,70,1,110,31,250,140,30,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,0,0,2344,3,2622,1,2680,1,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1834,'G_SALAMANDER','Salamander','Salamander',91,97934,0,0,0,2,7590,10860,65,50,1,55,44,45,180,25,10,12,2,0,63,0x37B5,170,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1835,'G_KASA','Kasa','Kasa',85,80375,0,0,0,2,3030,3500,23,70,1,110,31,250,140,30,10,12,2,0,63,0x37B5,150,872,600,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1836,'MAGMARING','Magmaring','Magmaring',40,5300,0,2110,1910,1,550,700,25,24,1,60,30,10,60,17,10,12,0,0,43,0x83,300,384,672,432,0,0,0,0,0,0,0,0,7097,1000,7096,1000,12018,100,757,100,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1837,'FIRE_IMP','Fire Imp','Fire Imp',76,46430,0,25200,11077,1,1059,1509,27,50,1,76,30,180,99,10,10,12,0,6,83,0x3395,120,76,384,288,0,0,0,0,0,0,0,0,7097,3000,7122,2000,13303,5,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1838,'KNOCKER','Knocker','Knocker',50,7755,0,2202,4023,1,889,990,28,50,1,44,50,62,65,60,10,12,0,6,22,0x191,200,576,384,288,0,0,0,0,0,0,0,0,997,30,1003,150,1040,5500,2286,1,2209,10,1001,100,5009,1,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1839,'BYORGUE','Byorgue','Byorgue',86,38133,0,19000,9500,3,1340,2590,20,13,1,80,12,30,70,10,10,12,1,7,20,0x37B5,150,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1840,'GOLDEN_SAVAGE','Golden Savage','Golden Savage',99,5000,0,0,0,1,0,0,0,0,0,0,1,50,0,0,10,12,2,2,42,0x91,150,1960,960,384,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1864,'ZOMBIE_SLAUGHTER','Zombie Slaughter','Zombie Slaughter',77,43000,0,12000,8500,1,800,855,35,45,1,30,50,1,75,35,10,12,1,1,69,0x3695,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1865,'RAGGED_ZOMBIE','Ragged Zombie','Ragged Zombie',75,25000,0,8500,5500,9,300,1200,25,35,1,77,25,10,101,50,10,12,1,1,69,0x3695,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1866,'HELL_POODLE','Hell Poodle','Hell Poodle',71,9000,0,4000,3000,1,200,400,35,20,5,26,14,5,39,10,10,12,0,6,27,0x3795,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1867,'BANSHEE','Banshee','Banshee',81,35111,0,17000,12000,1,943,1666,30,55,30,74,1,120,75,1,10,12,1,6,47,0x3795,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1868,'G_BANSHEE','Banshee','Banshee',81,35111,0,0,0,1,943,1666,30,55,30,74,1,120,75,1,10,12,1,6,47,0x3795,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1869,'FLAME_SKULL','Flame Skull','Flame Skull',60,10800,0,3000,2600,1,100,1100,20,40,50,100,30,40,140,110,10,12,0,6,68,0x3195,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1870,'NECROMANCER','Necromancer','Necromancer',88,98000,0,45000,35000,3,500,3500,0,40,1,50,1,190,166,10,10,12,1,1,89,0x37B5,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1871,'FALLINGBISHOP','Falling Bishop','Falling Bishop',80,3333333,0,1111111,1111111,3,1820,3220,50,0,1,80,15,126,120,20,10,12,1,6,47,0x37B5,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1872,'HELL_FLY','Hell Fly','Hell Fly',42,5242,0,0,0,1,246,333,25,15,33,105,32,15,72,30,10,12,0,4,44,0x3985,150,676,576,480,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1873,'BEELZEBUB','Beelzebub','Beelzebub',98,6666666,0,0,0,3,3410,10000,40,40,6,110,200,250,120,66,10,12,0,6,88,0x37B5,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1874,'BEELZEBUB_','Beelzebub','Beelzebub',98,6666666,0,6666666,6666666,3,3410,10000,40,40,6,110,200,250,120,66,10,12,2,6,88,0x37B5,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1875,'TRISTAN_III','Tristan III','Tristan III',90,43000,0,0,0,3,260,1366,25,30,5,10,10,69,70,1,10,12,0,0,20,0x37B5,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+# //Moscovia monsters (with sense info)
+REPLACE INTO `mob_db` VALUES (1880,'WOOD_GOBLIN','Wood Goblin','Leshij',42,6982,0,2200,0,1,10,150,0,5,1,10,48,43,10,30,10,12,1,3,62,0x81,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1881,'LES','Les','Lesavka',39,3080,0,1520,0,1,10,150,0,5,1,10,12,32,10,30,10,12,1,3,82,0x81,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1882,'VAVAYAGA','Babayaga','Baba-Yaga',49,7444,0,2582,0,1,10,150,0,5,1,10,24,88,10,30,10,12,1,7,21,0x3295,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1883,'UZHAS','Uzdas','Kikimora',61,7565,0,4600,0,1,10,150,0,5,1,10,19,72,10,30,10,12,1,7,61,0x3295,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1884,'MAVKA','Mavka','Mavka',63,19200,0,8300,0,9,10,150,0,5,1,10,57,34,10,30,10,12,1,3,62,0x3295,100,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1885,'GOPINICH','Gorynych','Zmey Gorynych',85,299321,0,0,0,3,200,1000,0,5,1,10,56,102,10,30,10,12,2,2,62,0x37B5,120,288,288,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+# //1886,MAVKA_BULLET,Mavka Bullet,Mavka Bullet... (mode 129),,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
